--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
+
+@layer base {
+  h1 {
+    @apply text-2xl;
+    @apply font-bold;
+    @apply py-5;
+  }
+  h2 {
+    @apply text-xl;
+    @apply font-bold;
+    @apply pt-5;
+  }
+}
+
 @tailwind components;
 @tailwind utilities;
